# game-of-life

./: CMakeLists.txt  life.cpp
